force-app/main/default/objects/FAQ_Entry__c/FAQ_Entry__c.object-meta.xml
<CustomObject>
    <description>Q&amp;A Pair for FAQ Entry</description>
    <label>FAQ Entry</label>
    <nameField>
        <displayFormat>FAQ-{0000}</displayFormat>
        <label>FAQ Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>