force-app/main/default/objects/FAQ_Entry__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only Active Q&amp;A entries will be displayed</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>