force-app/main/default/objects/FAQ_Entry__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Answer for the FAQ item</description>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>