force-app/main/default/objects/FAQ_Entry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Provider Portal - General</fullName>
            </value>
            <value>
                <fullName>Provider Portal - Time Entry</fullName>
            </value>
            <value>
                <fullName>Provider Portal - Application</fullName>
            </value>
            <value>
                <fullName>FOX - Provider Match</fullName>
            </value>
            <value>
                <fullName>FOX - Job Match</fullName>
            </value>
            <value>
                <fullName>FOX - Assignments</fullName>
            </value>
            <value>
                <fullName>FOX - ARTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>