force-app/main/default/objects/FAQ_Entry__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Here&#39;s a description</description>
    <inlineHelpText>Numeric value for display order (lower numbers displayed first).
NOTE: if sub-categories are in mixed order, they will be duplicated!</inlineHelpText>
    <label>DisplayORDER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>