force-app/main/default/objects/FAQ_Entry__c/fields/Divisions__c.field-meta.xml
<CustomField>
    <fullName>Divisions__c</fullName>
    <inlineHelpText>Select the division(s) for which this Q&amp;A entry applies</inlineHelpText>
    <label>Divisions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHS</fullName>
            </value>
            <value>
                <fullName>CHA</fullName>
            </value>
            <value>
                <fullName>GRA</fullName>
            </value>
            <value>
                <fullName>LAB</fullName>
            </value>
            <value>
                <fullName>RNN</fullName>
            </value>
            <value>
                <fullName>WBY</fullName>
            </value>
            <value>
                <fullName>WMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>