force-app/main/default/objects/FAQ_Entry__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <inlineHelpText>Any notes for collaboration or discussion on an item</inlineHelpText>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>