force-app/main/default/objects/FAQ_Entry__c/fields/Is_Testing__c.field-meta.xml
<CustomField>
    <fullName>Is_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not we are testing</description>
    <label>Is Testing</label>
    <type>Checkbox</type>
</CustomField>