force-app/main/default/objects/FAQ_Entry__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Question for the FAQ</description>
    <label>Question</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>