force-app/main/default/objects/FAQ_Entry__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <inlineHelpText>Sub-category for grouping questions within a single FAQ</inlineHelpText>
    <label>Sub Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>